--- a/protecc_frontend/protecc.html
+++ b/protecc_frontend/protecc.html
@@ -4,6 +4,7 @@
 <head>
   <title>Protecc</title>
   <link rel="stylesheet" type="text/css" href="protecc.css">
+  <script type="text/javascript" src="protecc.js"></script>
   <style>
   </style>
 </head>
