--- a/protecc_frontend/protecc.html
+++ b/protecc_frontend/protecc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 <html>
-  <!---head--->
+  <!--head-->
 <head>
   <title>Protecc</title>
   <link rel="stylesheet" type="text/css" href="protecc.css">
@@ -9,10 +9,21 @@
   </style>
 </head>
   
-  <!---body--->
+  <!--body-->
 <body>
   <h1> P R O T E C C </h1>
-  <!---start button--->
+
+  <!--Setting Menu--> 
+  <div class="dropdown">
+    <button class="dropbtn">Detection Settings</button>
+    <div class="dropdown-content">
+      <a href="#sensitivity">Sensitivity</a>
+      <a href="#record_video">Record Video</a>
+      <a href="#cam_resolution">Camera Resolution</a>
+    </div>
+  </div>
+
+  <!--start button-->
   <div class="start_button">
     <button class = "start_button">START</button>
   </div>
@@ -22,7 +33,7 @@
     <button class = "start_button">STOP</button>
   </div>
   
-  <!---Categories--->
+  <!--Categories-->
   <div>
     <table style="width:100%">
       <tr>
@@ -33,7 +44,7 @@
     </table>
   </div>
   
-  <!---Footage--->
+  <!--Footage-->
   <div style = "text-align: center">
     <b> Recorded Footage </b>
   </div>
