alignment of button and fonts

--- a/protecc_frontend/protecc.html
+++ b/protecc_frontend/protecc.html
@@ -22,16 +22,19 @@
       <a href="#cam_resolution">Camera Resolution</a>
     </div>
   </div>
+  <br>
 
   <!--start button-->
   <div class="start_button">
     <button class = "start_button">START</button>
   </div>
-  
+  <br>
+
   <!--stop button--->
   <div class="stop_button">
-    <button class = "start_button">STOP</button>
+    <button class = "stop_button">STOP</button>
   </div>
+  <br>
   
   <!--Categories-->
   <div>
@@ -43,6 +46,7 @@
       </tr>
     </table>
   </div>
+  <br>
   
   <!--Footage-->
   <div style = "text-align: center">
