--- a/protecc_frontend/protecc.html
+++ b/protecc_frontend/protecc.html
@@ -26,6 +26,20 @@
       border-collapse: collapse;
     }
   </style>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    var newImage = new Image();
+    $(document).ready(function () {
+        setTimeout(function () {
+            window.location.reload();
+            // newImage.src = document.getElementById("picture").src;
+            // number++;
+            // document.getElementById("picture").src = "protecc_backend/known_faces/obama.jpeg";
+            // console.log("new image: " + document.getElementById("picture").src);
+        }, 5000);
+    });
+  </script>
 </head>
   
   <!--body-->
