everything polished on front page except "about"

--- a/protecc_frontend/protecc.html
+++ b/protecc_frontend/protecc.html
@@ -55,7 +55,7 @@
   
   <div id="help" class="tabcontent">
     <h3>Help</h3>
-    <table style="width:100%">
+    <table style="width:100% ; background-color: #9FE2BF;">
       <tr>
         <th style="width:33%">Webcam</th>
         <th style="width:34%">Detection Settings</th> 
@@ -78,7 +78,9 @@
   
   <div id="contact" class="tabcontent">
     <h3>Contact</h3>
-    <p>Contact Description</p> 
+    <p style = "font-family: arial">
+      <strong>Address: </strong>9500 Gilman Dr, La Jolla, CA 92093 <br><br>
+      <strong>Phone: </strong>(858) 534-6237</p> 
   </div>
   
   <div id="about" class="tabcontent">
@@ -234,18 +236,18 @@
   <br>
   
   <h2>Directories</h2>
-  <div id ="dir">
+  <div id ="dirs">
     <div class = "all_dir">
-      <input class = "unknown_dir" type = button onClick = "location.href = 'unknowndir.html'" value='Unknown People Directory'>
+      <input class = "dir unknown" type = button onClick = "location.href = 'unknowndir.html'" value='Unknown People Directory'>
     </div>
     <div class = "all_dir">
-      <input class = "trust_dir" type = button onClick = "location.href = 'trustdir.html'" value='Trusted People Directory'>
+      <input class = "dir trust" type = button onClick = "location.href = 'trustdir.html'" value='Trusted People Directory'>
     </div>
     <div class = "all_dir">
-      <input class = "motion_dir" type = button onClick = "location.href = 'motiondir.html'" value='Motion Detection Directory'>
+      <input class = "dir motion" type = button onClick = "location.href = 'motiondir.html'" value='Motion Detection Directory'>
     </div>
     <div class = "all_dir">
-      <input class = "record_dir" type = button onClick = "location.href = 'recorddir.html'" value='Recorded Footages Directory'>
+      <input class = "dir record" type = button onClick = "location.href = 'recorddir.html'" value='Recorded Footages Directory'>
     </div>
   </div>
   <br>
