return home for all 4 directories

--- a/protecc_frontend/recorddir.html
+++ b/protecc_frontend/recorddir.html
@@ -11,5 +11,8 @@
   
   <!--body-->
 <body>
-
+    <div class = "return_page">
+        <input class = "return home" type = button onClick = "location.href = 'protecc.html'" value='Return Home'>
+      </div>
+      <h1>Recorded Footages Directory</h1>
 </body>
