--- a/protecc_frontend/unknowndir.html
+++ b/protecc_frontend/unknowndir.html
@@ -5,8 +5,15 @@
   <title>unknowndir</title>
   <link rel="stylesheet" type="text/css" href="unknowndir.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-  </style>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+        setTimeout(function () {
+            window.location.reload();
+        }, 5000);
+    });
+  </script>
 </head>
   
   <!--body-->
@@ -15,4 +22,6 @@
     <input class = "return home" type = button onClick = "location.href = 'protecc.html'" value='Return Home'>
   </div>
   <h1>Unknown People Directory</h1>
+  <img id="picture" src="data:image/png;base64,{{ img_data_d }}">
+
 </body>
